# omegax-protocol

./: .gitignore  AGENTS.md  AUTHORS.md  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  Quasar.toml  README.md  SECURITY.md  TRADEMARKS.md  clean_frontend.py  deny.toml  firebase.json  omegax_protocol.qedspec  package-lock.json  package.json  patch_components.py  patch_css.py  rust-toolchain.toml  tsconfig.json
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.qed/: config.json  probe-suppress.toml
android-native/: README.md
devnet/: fullcover-working-adults-model.json  health-capital-markets-manifest.json  health-capital-markets.env  italy-stroke-rehab-model.json  italy-thr-rehab-model.json  italy-tkr-rehab-model.json
docs/: MIGRATION_MATRIX.md  README.md  WHY_THIS_MODEL.md
e2e/: README.md  localnet_adversarial_matrix.test.ts  localnet_omegax_commitment_balance.test.ts  localnet_protocol_surface.test.ts  localnet_selected_asset_claim_payout.test.ts
examples/: README.md
formal_verification/: Spec.lean  omegax_private_claim_review.qedspec
frontend/: .env.example  README.md  apphosting.yaml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
idl/: README.md  omegax_private_claim_review.json  omegax_private_claim_review.source-hash  omegax_protocol.json  omegax_protocol.source-hash
programs/: README.md
programs/omegax_private_claim_review/: Cargo.toml
programs/omegax_private_claim_review/src/: lib.rs
programs/omegax_protocol/: Cargo.toml  README.md
programs/omegax_protocol/src/: args.rs  capital.rs  certora.rs  claims.rs  commitments.rs  constants.rs  core_accounts.rs  errors.rs  events.rs  fees.rs  funding_obligations.rs  governance.rs  kernel.rs  lib.rs  oracle_schema.rs  plans_membership.rs  platform.rs  quasar_discriminators.rs  reserve_custody.rs  reserve_waterfall.rs  state.rs  surface.rs  tests.rs  types.rs  v2.rs
programs/omegax_protocol/src/capital/: allocations.rs  classes.rs  impairments.rs  liquidity_pool.rs  lp_positions.rs  mod.rs  redemptions.rs
programs/omegax_protocol/src/funding_obligations/: funding_lines.rs  inflows.rs  mod.rs  obligations.rs  reserves.rs  settlement.rs
programs/omegax_protocol/src/kernel/: auth.rs  bindings.rs  capital_math.rs  custody.rs  fees.rs  membership.rs  reserve_accounting.rs
programs/omegax_protocol/src/surface/: admin.rs  contexts.rs  coverage.rs  cycles.rs  errors.rs  pools.rs  rewards.rs  shared.rs  state.rs  treasury.rs
programs/omegax_protocol/src/surface/contexts/: coverage.rs  cycles.rs  liquidity.rs  members.rs  oracles.rs  pools.rs  protocol.rs  rewards.rs  schemas.rs  treasury.rs
programs/omegax_protocol/src/surface/cycles/: activation.rs  settlement.rs
programs/omegax_protocol/src/surface/shared/: account_io.rs  compliance.rs  coverage.rs  guards.rs  liquidity.rs  membership.rs  oracle.rs  premium.rs  quotes.rs  risk.rs  rules.rs  treasury.rs
programs/omegax_protocol/src/v2/: admin.rs  contexts.rs  coverage.rs  errors.rs  events.rs  pools.rs  rewards.rs  shared.rs  state.rs  treasury.rs
programs/omegax_protocol/src/v2/contexts/: coverage.rs  cycles.rs  liquidity.rs  oracles.rs  pools.rs  protocol.rs  rewards.rs  schemas.rs  treasury.rs
programs/omegax_protocol/src/v2/cycles/: activation.rs  settlement.rs
programs/omegax_protocol/src/v2/shared/: account_io.rs  compliance.rs  coverage.rs  guards.rs  liquidity.rs  membership.rs  oracle.rs  premium.rs  quotes.rs  risk.rs  rules.rs  treasury.rs
scripts/: AGENTS.md  README.md  anchor_build_with_stack_gate.mjs  anchor_test_with_stack_gate.mjs  bootstrap_devnet_live_protocol.ts  (+43 more)
(+448 files in other folders)
