[package]
name = "omegax_private_claim_review"
version = "0.1.0"
description = "OmegaX MagicBlock private claim review session adjunct program"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]
name = "omegax_private_claim_review"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor", "disable-realloc"] }
